--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "## Intuition behind PAC\n",
     "\n",
-    "> The PAC is a learning models which is characterized by __learning from examples__. \n",
+    "> The PAC is a learning model which is characterized by __learning from examples__. \n",
     "\n",
     "In its simplest form, consider $f$ as the target function to be __learnt__, the __learner__ (the computational model) is provided with some random examples in the form of $(X,f(X))$.\n",
     "\n",
@@ -46,7 +46,7 @@
     "\n",
     "$$f : [0, 1]^n → {0, 1}$$. \n",
     "\n",
-    "What do we actually mean by __success__?  It should actually be any measure or a series of evaluation steps that help us find that the __algorithm meets the criteria__. Hence this approach can b shown using the model below:"
+    "What do we actually mean by __success__?  It should actually be any measure or a series of evaluation steps that help us find that the __algorithm meets the criteria__. Hence this approach can be shown using the model below:"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "source": [
     "## Failure Probability \n",
     "\n",
-    "According to PAC, there is always a small probability that the learning algorithm fails and the results produced are not accurate. One obvious reason could be that learning examples do not fully reflect the probability distribution that the examples belong to, and. i.e. This hinders l learning process seriously and target function $f$ can not be achieved. insufficient examples is something that we come across very often in machine learning discipline.  PAC Learning attempts to reduce the probability of getting such poor examples by __considering a sufficient number of examples__ for learning the required function. \n",
+    "According to PAC, there is always a small probability that the learning algorithm fails and the results produced are not accurate. One obvious reason could be that learning examples do not fully reflect the probability distribution that the examples belong to, and. i.e. This hinders I learning process seriously and target function $f$ can not be achieved. insufficient examples is something that we come across very often in machine learning discipline.  PAC Learning attempts to reduce the probability of getting such poor examples by __considering a sufficient number of examples__ for learning the required function. \n",
     "\n",
     "> __PAC learning approach places an upper bound on the probability of error by placing a lower bound on the number\n",
     "of examples required to learn the target function.__"
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
